# claude-code-live-memory

./: .gitignore  .mcp.json  AGENTS.md  COMPARISON.md  DESIGN.md  FUTURE_DIRECTIONS.md  PRIVACY.md  README.md  TESTING.md  TODO.md  benchmark.md  run-tests.sh  server.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
benchmark/: README.md
benchmark/harness/: README.md  ab_single.sh  accuracy.py  aggregate_hybrid.py  analyze.py  freshness.py  hybrid_tasks.json  passive_compaction.py  passive_hinge.py  run_hybrid.py  run_parallel.sh  run_reps.sh  run_reps2.sh  run_sequence.sh  run_understanding.sh  run_understanding_sequence.sh  setup_worktree.sh  steady_state.py
benchmark/results/: RESULTS.md
benchmark/results/hybrid/: results.csv
benchmark/results/parallel/: results.csv
benchmark/results/replicates/: results.csv
commands/: banner.txt  config.py  empty.py  live-memory-config.md  live-memory-empty.md  live-memory-stats.md  stats.py
deploy/: install-service.sh  live-memory.env.example  live-memory.service
git-hooks/: install.sh  pre-push
hooks/: hooks.json  notify.py
media/: README.md  explainer-card.html  stats-poster.html
media/demo/: ask_live_memory  live-memory.tape
server/: README.md  pyproject.toml
server/live_memory/: __init__.py  __main__.py  async_jobs.py  config.py  constants.py  context_window.py  conversation_store.py  directory_tree.py  keep_warm.py  llm_client.py  logging_setup.py  manager.py  models.py  oauth.py  pricing.py  prompts.py  question_queue.py  server.py  summarizer.py  tool_executor.py  workspace.py
server/tests/: conftest.py  test_config.py  test_core.py  test_integration.py  test_io.py  test_llm_openai.py  test_manager.py  test_oauth.py  test_passive.py  test_provenance.py  test_summarizer.py
skills/live-memory/: SKILL.md
(+20 files in other folders)
