[project]
name = "shofer-live-memory"
version = "0.4.3"
description = "A cheap, persistent, read-only codebase memory for Claude Code — a large-context model that accumulates repo knowledge across sessions and answers via ask_live_memory instead of re-reading files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "shofer.dev" }]
keywords = ["mcp", "claude-code", "memory", "codebase", "context", "llm"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "watchdog>=4.0.0",
]

[project.scripts]
live-memory-server = "live_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/shofer-dev/claude-code-live-memory"
Repository = "https://github.com/shofer-dev/claude-code-live-memory"
Issues = "https://github.com/shofer-dev/claude-code-live-memory/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["live_memory*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false   # FastMCP @tool/@custom_route are untyped (3rd-party)
exclude = "tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: real MCP transport + server subprocess (LLM endpoint mocked, no network). Skip with -m 'not integration'.",
]

[project.optional-dependencies]
dev = ["mypy>=1.8", "pytest>=8.0", "pytest-asyncio>=0.23"]
